{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 336,
  "lineage": "683b178c-3ba7-4474-b629-70f3dba0aa65",
  "resources": [
    {
      "module": "module.call-ec2-module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df368112825f8d8f",
            "arn": "arn:aws:ec2:eu-west-1:194343180745:instance/i-0dceab957f32bd0e4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dceab957f32bd0e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-087e0ba518fd98e51",
            "private_dns": "ip-172-16-6-157.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.6.157",
            "public_ip": "54.195.66.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08c12189fa003784b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae172d23a0d359bb",
            "tags": {
              "Name": "aws-hcl-infra-ec2"
            },
            "tags_all": {
              "Name": "aws-hcl-infra-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05a9a5e35d8258bcf"
            ]
          },
          "dependencies": [
            "module.call-security-group.aws_security_group.this",
            "module.call-vpc-module.aws_subnet.public_subnet_az1",
            "module.call-vpc-module.aws_vpc.vpc",
            "module.call-vpc-module.data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "module": "module.call-security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:194343180745:security-group/sg-05a9a5e35d8258bcf",
            "description": "Description of the security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a9a5e35d8258bcf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TCP on port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TCP on port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TCP on port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20250603000959091500000001",
            "name_prefix": "terraform-",
            "owner_id": "194343180745",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-023964e56755391a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.call-vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.call-vpc-module",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:194343180745:security-group/sg-01a2d57ad2a487401",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-01a2d57ad2a487401",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "194343180745",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-023964e56755391a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.call-vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.call-vpc-module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:194343180745:internet-gateway/igw-09a5bd8f5e4890825",
            "id": "igw-09a5bd8f5e4890825",
            "owner_id": "194343180745",
            "tags": {
              "Name": "aws-hcl-infra-igw"
            },
            "tags_all": {
              "Name": "aws-hcl-infra-igw"
            },
            "vpc_id": "vpc-023964e56755391a8"
          },
          "dependencies": [
            "module.call-vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.call-vpc-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:194343180745:route-table/rtb-0b1f312385275cd26",
            "id": "rtb-0b1f312385275cd26",
            "owner_id": "194343180745",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a5bd8f5e4890825",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-hcl-infra-rt"
            },
            "tags_all": {
              "Name": "aws-hcl-infra-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-023964e56755391a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.call-vpc-module.aws_internet_gateway.igw",
            "module.call-vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.call-vpc-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public_subnet_az1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06740d3cf7b09d53b",
            "route_table_id": "rtb-0b1f312385275cd26",
            "subnet_id": "subnet-0ae172d23a0d359bb"
          },
          "dependencies": [
            "module.call-vpc-module.aws_internet_gateway.igw",
            "module.call-vpc-module.aws_route_table.rt",
            "module.call-vpc-module.aws_subnet.public_subnet_az1",
            "module.call-vpc-module.aws_vpc.vpc",
            "module.call-vpc-module.data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "module": "module.call-vpc-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:194343180745:subnet/subnet-0ae172d23a0d359bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae172d23a0d359bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194343180745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_az1"
            },
            "tags_all": {
              "Name": "public_subnet_az1"
            },
            "vpc_id": "vpc-023964e56755391a8"
          },
          "dependencies": [
            "module.call-vpc-module.aws_vpc.vpc",
            "module.call-vpc-module.data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "module": "module.call-vpc-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:194343180745:subnet/subnet-0cbe2271e6fa2c99a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.16.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbe2271e6fa2c99a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194343180745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_az2"
            },
            "tags_all": {
              "Name": "public_subnet_az2"
            },
            "vpc_id": "vpc-023964e56755391a8"
          },
          "dependencies": [
            "module.call-vpc-module.aws_vpc.vpc",
            "module.call-vpc-module.data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "module": "module.call-vpc-module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:194343180745:vpc/vpc-023964e56755391a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0acf6c32b6c9e2cd1",
            "default_route_table_id": "rtb-0bbc17b99dc75c38d",
            "default_security_group_id": "sg-01a2d57ad2a487401",
            "dhcp_options_id": "dopt-04e80e3a1b8f8cf41",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-023964e56755391a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bbc17b99dc75c38d",
            "owner_id": "194343180745",
            "tags": {
              "Name": "aws-hcl-infra-vpc"
            },
            "tags_all": {
              "Name": "aws-hcl-infra-vpc"
            }
          }
        }
      ]
    }
  ]
}